--- a/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.html
@@ -1,5 +1,5 @@
 <div class="project-detail-page my-8">
-  <div class="px-md-0 mx-3">
+  <div class="px-md-0 project-detail-pagecard mx-3">
     <h1 class="mt-5 text-white text-end big">PROJECT DETAILS</h1>
     <div class="text-white project rounded p-md-5 p-4">
       <div class="py-4 pt-0 mx-0 row project-card">
