--- a/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.scss
+++ b/src/app/Pages/projects/projectDetalis/components/upload-files/upload-files.scss
@@ -108,4 +108,10 @@ img{
   width: 100% !important;
 
 }
+
+}
+@media (max-width: 575.98px) {
+  .project-detail-pagecard {
+    margin: 0 !important;
+  }
 }
