--- a/src/app/Pages/projects/projectDetalis/components/update-campaign-stats/update-campaign-stats.html
+++ b/src/app/Pages/projects/projectDetalis/components/update-campaign-stats/update-campaign-stats.html
@@ -5,7 +5,7 @@
 
   <div class="fourth mt-1">
     <div
-      class="container-fluid text-white p-5 h-100"
+      class="container-fluid text-white p-5 fourthP  h-100"
       style="background-color: #171818; border-radius: 13px; height: 100%"
     >
       <div class="row">
