--- a/src/app/Pages/projects/projectDetalis/components/add-media-buying/add-media-buying.html
+++ b/src/app/Pages/projects/projectDetalis/components/add-media-buying/add-media-buying.html
@@ -24,7 +24,7 @@
       </div>
 
       <!-- Right: Date Range Picker -->
-      <div class="col-md-8 d-flex justify-content-center align-items-center px-0">
+      <div class="col-md-8 d-flex justify-content-center align-items-center ">
         <div class="date-picker-box d-flex w-100" style="background: #232323; border-radius: 12px; padding: 32px 24px">
           <!-- Quick Filters -->
 
@@ -72,7 +72,7 @@
       </div>
 
       <div class="d-flex mb-2 justify-content-between align-items-center">
-        <h6 class="px-0">Campaign Stats</h6>
+        <h6 class="px-0 mt-4">Campaign Stats</h6>
       </div>
       <div class="p-3 rounded" style="background: linear-gradient(to right, #001a1a, #005e5e)">
         <div class="statesCards">
